--- a/source/css/_vars.scss
+++ b/source/css/_vars.scss
@@ -1,5 +1,5 @@
 // fonts
-$font-base : Tahoma, Verdana, Segoe, sans-serif;
+$font-base  : "Helvetica Neue", Helvetica, Arial, sans-serif;
 $font-light : 200;
 $font-reg   : 400;
 $font-bold  : 700;
